[gd_scene load_steps=18 format=3 uid="uid://di07atsto7nig"]

[ext_resource type="Script" path="res://Scripts/playerselect.gd" id="1_u06kv"]
[ext_resource type="Texture2D" uid="uid://cak7xs7c0jt6f" path="res://Assets/Matato/matato.png" id="2_8g4no"]
[ext_resource type="Texture2D" uid="uid://bvnn126xh7c63" path="res://Assets/hidden_character.png" id="2_j1aq8"]
[ext_resource type="FontFile" uid="uid://ca3pydilgjxvf" path="res://Assets/Alkhemikal.ttf" id="4_0apf5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3o85"]
bg_color = Color(0.0196078, 0.160784, 0.0941176, 0.870588)

[sub_resource type="AtlasTexture" id="AtlasTexture_eupkc"]
atlas = ExtResource("2_j1aq8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ks7a"]
atlas = ExtResource("2_j1aq8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp3hl"]
atlas = ExtResource("2_j1aq8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8upr"]
atlas = ExtResource("2_j1aq8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx1wl"]
atlas = ExtResource("2_j1aq8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb2al"]
atlas = ExtResource("2_j1aq8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp4be"]
atlas = ExtResource("2_8g4no")
region = Rect2(0, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_nts6d"]
atlas = ExtResource("2_8g4no")
region = Rect2(0, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_5svtn"]
atlas = ExtResource("2_8g4no")
region = Rect2(33, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5y5n"]
atlas = ExtResource("2_8g4no")
region = Rect2(0, 33, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_teput"]
atlas = ExtResource("2_8g4no")
region = Rect2(33, 33, 33, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_yte00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eupkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ks7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp3hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8upr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx1wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb2al")
}],
"loop": true,
"name": &"hidden",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp4be")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nts6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5svtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5y5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teput")
}],
"loop": true,
"name": &"walkside",
"speed": 10.0
}]

[node name="playerselect" type="Node2D"]
script = ExtResource("1_u06kv")

[node name="Panel" type="Panel" parent="."]
offset_right = 1155.0
offset_bottom = 646.0
theme_override_styles/panel = SubResource("StyleBoxFlat_t3o85")

[node name="Des" type="Label" parent="."]
offset_left = 520.0
offset_top = 213.0
offset_right = 608.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("4_0apf5")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="PlayerSelect" type="AnimatedSprite2D" parent="."]
position = Vector2(564, 304)
scale = Vector2(2.90151, 2.90151)
sprite_frames = SubResource("SpriteFrames_yte00")
animation = &"hidden"
frame_progress = 0.66423

[node name="Left" type="Button" parent="."]
offset_left = 344.0
offset_top = 288.0
offset_right = 469.0
offset_bottom = 337.0
theme_override_fonts/font = ExtResource("4_0apf5")
theme_override_font_sizes/font_size = 32
text = "<-"

[node name="Right" type="Button" parent="."]
offset_left = 658.0
offset_top = 287.0
offset_right = 783.0
offset_bottom = 336.0
theme_override_fonts/font = ExtResource("4_0apf5")
theme_override_font_sizes/font_size = 32
text = "->"

[node name="Button" type="Button" parent="."]
offset_left = 472.0
offset_top = 473.0
offset_right = 655.0
offset_bottom = 550.0
theme_override_fonts/font = ExtResource("4_0apf5")
theme_override_font_sizes/font_size = 32
text = "Enter"

[node name="Button2" type="Button" parent="."]
offset_left = 7.0
offset_top = 562.0
offset_right = 190.0
offset_bottom = 636.0
theme_override_fonts/font = ExtResource("4_0apf5")
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
